--- a/package.json
+++ b/package.json
@@ -1,69 +1,26 @@
 {
-  "name": "@multidata/sdk",
-  "version": "0.0.1-development",
-  "description": "Multidata oracle SDK",
-  "exports": {
-    ".": {
-      "import": {
-        "types": "./lib/esm/types/index.d.ts",
-        "default": "./lib/esm/index.mjs"
-      },
-      "require": {
-        "types": "./lib/cjs/types/index.d.ts",
-        "default": "./lib/cjs/index.js"
-      }
-    }
-  },
-  "types": "./lib/cjs/types/index.d.ts",
-  "main": "./lib/cjs/index.js",
+  "name": "@chunknet/sdk",
+  "version": "0.1.0",
+  "description": "Ethers.js wrapper for interacting with ICoreMultidataFeedsReader oracle contracts",
+  "type": "module",
+  "main": "src/index.js",
+  "exports": "./src/index.js",
   "files": [
-    "lib/**/*"
+    "src"
   ],
   "scripts": {
-    "clean": "rm -rf ./lib",
-    "build": "npm run clean && npm run build:esm && npm run build:cjs",
-    "build:esm": "tsc -p ./configs/tsconfig.esm.json && mv lib/esm/index.js lib/esm/index.mjs",
-    "build:cjs": "tsc -p ./configs/tsconfig.cjs.json",
-    "semantic-release": "semantic-release",
-    "prepack": "npm run build"
-  },
-  "release": {
-    "branches": [
-      "main"
-    ]
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/multidatacore/sdk"
+    "test": "node --test --loader ./test/stub-modules/ethers-loader.mjs"
   },
   "keywords": [
-    "npm",
-    "javascript",
-    "typescript",
-    "multidata",
     "oracle",
-    "eth"
+    "ethers",
+    "multidata",
+    "feeds",
+    "chunknet"
   ],
-  "author": "Unit Protocol",
+  "author": "",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/multidatacore/sdk/issues"
-  },
-  "homepage": "https://github.com/multidatacore/sdk#readme",
-  "devDependencies": {
-    "@types/chai": "^4.3.4",
-    "@types/mocha": "^9.1.1",
-    "chai": "^4.3.7",
-    "mocha": "^10.2.0",
-    "semantic-release": "^19.0.3",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
-  },
-  "dependencies": {
-    "bignumber.js": "^9.1.1",
-    "web3": "^1.8.2"
+  "peerDependencies": {
+    "ethers": "^6.0.0"
   }
 }
